# gradiochat

./: README.md  app.html  app.html.md  config.html  config.html.md  gradio_preconfigs.html  gradio_preconfigs.html.md  gradio_themes.html  gradio_themes.html.md  gradio_themesbuilder.html  gradio_themesbuilder.html.md  gradiochat_utils.html  gradiochat_utils.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  ui.html  ui.html.md
docs_md/: architecture.md  datamodel.md
gradiochat/: _modidx.py
nbs/: 00_config.ipynb  01_app.ipynb  02_ui.ipynb  03_export.ipynb  98_gradio_themes.ipynb  99_gradio_themesbuilder.ipynb  99_themesbuilder.ipynb  index.ipynb
src/gradiochat/: __init__.py  _modidx.py  app.py  config.py  dataclasses.py  gradio_themebuilder.py  gradio_themes.py  ui.py
