[project]
name = "gradiochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hopsakee", email = "jdejong@posteo.nl" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gradiochat = "gradiochat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
